Fixing X axis body overflow on mobile

--- a/src/styles/_type.scss
+++ b/src/styles/_type.scss
@@ -4,6 +4,7 @@ html {
     font-family: 'Spartan', sans-serif;
     font-size: 15px;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 
     @media screen and (max-width: 900px) {
         font-size: 13px;
